AZURE/ansible/static-website/static-site-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-site
  namespace: keycloak
  labels:
    app: static-site
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
  volumes:
  - name: html
    configMap:
      name: static-html
