AZURE/ansible/static-website/static-site-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site-service
  namespace: keycloak
spec:
  selector:
    app: static-site
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
