AZURE/ansible/static-website/static-site-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-site
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: static.134.112.84.178.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-site-service
            port:
              number: 80
